added new slice, private route

--- a/src/pages/Header/Header.module.scss
+++ b/src/pages/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   align-items: center;
-  height: 97px;
+  height: 5%;
   background: #2B2C37;
   padding: 35px 0;
 }
@@ -9,8 +9,8 @@
 .logoContainer {
   min-width: 300px;
   padding-left: 34px;
-  height: 97px;
   display: flex;
+
   align-items: center;
   gap: 20px;
   border-right: 1px solid #3E3F4E;
