--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,3 +1,13 @@
 .container {
-  color: #000;
+  height: 80%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .form {
+    padding: 40px;
+    background: #fff;
+    border-radius: 10px;
+  }
 }
