--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,12 @@
+@import 'mixins/mixins';
 @import 'reset.scss';
 @import 'variables/global.scss';
 @import 'themes/dark.scss';
 @import 'themes/light.scss';
 
+
 .app {
+ position: relative;
  font: var(--font-m);
 
  background-color: var(--bg-color);
