--- a/src/common/widget/Sidebar/Sidebar.module.scss
+++ b/src/common/widget/Sidebar/Sidebar.module.scss
@@ -1,5 +1,6 @@
 .container {
     width: 22vw;
+    height: 1px;
     min-height: calc(100vh);
     position: fixed;
     left: 0;
@@ -9,12 +10,14 @@
     border-right: 1px solid #3E3F4E;
 
     .innerWrapper {
+        padding: 10px 10px 10px 0;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
 
         .logoContainer {
-            padding: 10px 0 5px 5vw;
+            padding-left: 5vw;
+            margin-bottom: 50px;
         }
     }
   }
