--- a/src/common/components/TodosLink/TodosLink.module.scss
+++ b/src/common/components/TodosLink/TodosLink.module.scss
@@ -50,6 +50,7 @@
     }
 
     .active {
+        margin-bottom: 10px;
         background-color: #635FC7;
         width: 276px;
         border-radius: 0px 100px 100px 0px;
