added function update todo and delete

--- a/src/common/components/TodosLink/TodosLink.module.scss
+++ b/src/common/components/TodosLink/TodosLink.module.scss
@@ -12,48 +12,13 @@
     }
 
     .addBoardTitle {
+        margin-top: 30px;
         padding-left: 32px;
         font-weight: 700;
-        font-size: 15px;
+        font-size: 20px;
         line-height: 19px;
         color: #635FC7;
-    }
-
-    .item {
-        display: flex;
-        gap: 16px;
-        padding-left: 32px;
-        list-style-type: none;
-        width: 276px;
-        height: 48px;
-        border-radius: 0px 100px 100px 0px;
-        cursor: pointer;
-
-        .boardTitle {
-            align-self: center;
-            font-weight: 700;
-            font-size: 15px;
-            line-height: 19px;
-            color: #FFFFFF;
-        }
-
-        .boardIconContainer {
-            align-self: center;
-            max-height: 16px;
-            height: max-content;
-
-            .boardIcon {
-                max-width: 16px;
-                max-height: 16px;
-            }
-        }
-    }
-
-    .active {
-        margin-bottom: 10px;
-        background-color: #635FC7;
-        width: 276px;
-        border-radius: 0px 100px 100px 0px;
         cursor: pointer;
     }
+
 }
