--- a/src/common/components/Todolist/Todolist.module.scss
+++ b/src/common/components/Todolist/Todolist.module.scss
@@ -5,7 +5,8 @@
     justify-content: flex-end;
 
     .wrapper {
-        width: 78vw;
+        padding: 30px;
+        width: 82vw;
         min-height: 100%;
     }
 }
