--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -10,6 +10,18 @@ Link {
   text-decoration: none;
 }
 
+input[type=text] {
+  border:none;
+  background:none;
+  color: #fff;
+  outline:none;
+  padding:0;
+}
+
+input:focus {
+  outline: none;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
