added add modal, edit modal, update and fix date

--- a/src/common/components/Todolist/Todolist.module.scss
+++ b/src/common/components/Todolist/Todolist.module.scss
@@ -1,12 +1,17 @@
 .container {
-    width: 100vw;
+    width: 100%;
     min-height: 100%;
     display: flex;
     justify-content: flex-end;
 
     .wrapper {
-        padding: 30px;
+        padding: 20px 100px;
         width: 82vw;
         min-height: 100%;
     }
+
+    .isOpen {
+        //padding: 20px 23px;
+    }
 }
+
