--- a/src/app/pages/Header/Header.module.scss
+++ b/src/app/pages/Header/Header.module.scss
@@ -4,6 +4,7 @@
 
   background: #2B2C37;
   box-shadow: 0px 2px 10px rgba(109, 109, 109, 0.25), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.09);
 
   .wrapper {
     height: 100%;
