--- a/src/common/components/TodosLink/TodosLink.module.scss
+++ b/src/common/components/TodosLink/TodosLink.module.scss
@@ -6,6 +6,7 @@
 
     .boardCount {
         padding-left: 32px;
+        font-size: 18px;
         display: flex;
         flex-direction: column;
         margin-bottom: 10px;
