--- a/src/common/components/Form/FormWrapper/FormWrapper.module.scss
+++ b/src/common/components/Form/FormWrapper/FormWrapper.module.scss
@@ -18,7 +18,7 @@
       width: 413px;
       padding: 35px 33px;
 
-      background: #fff;
+      background: #2B2C37;
       border-radius: 10px;
       box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
 
@@ -36,7 +36,7 @@
         font-size: 26px;
         font-weight: 600;
         line-height: 32px;
-        color: #000000;
+        color: #fff;
       }
 
       .textQuestion {
