--- a/src/common/components/Todolist/Todolist.module.scss
+++ b/src/common/components/Todolist/Todolist.module.scss
@@ -5,7 +5,7 @@
     justify-content: flex-end;
 
     .wrapper {
-        padding: 20px 100px;
+        padding: 3vw 5vw;
         width: 82vw;
         min-height: 100%;
     }
