--- a/src/styles/mixins/mixins.scss
+++ b/src/styles/mixins/mixins.scss
@@ -28,7 +28,7 @@
     font-weight: 400;
 
     .input {
-      width: max-content;
+      width: 300px;
       height: 30px;
       padding: 5px;
 
@@ -36,18 +36,20 @@
       font-weight: 500;
       line-height: 24px;
       color: #fff;
-      background-color: #000112;
+      background-color: #2B2C37;
+      box-shadow: inset 20px 20px 0px 20px #2B2C37;
 
-      & {
+
         outline: none;
-      }
+      
 
       border: none;
-      border-bottom: 1px solid rgba(128, 128, 128, 0.16);
+      border-bottom: 1px solid #fff;
 
       &:hover {
         border-bottom: 1px solid gray;
         outline: none;
+        color: #fff;
       }
 
       &:focus {
