--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -44,5 +44,5 @@ select:-webkit-autofill:focus {
 
   transition: background-color 5000s ease-in-out 0s;
 
-  -webkit-text-fill-color: #1f1f20;
+  -webkit-text-fill-color: #fff;
 }
