--- a/src/common/components/EditToDo/EditTodo.module.scss
+++ b/src/common/components/EditToDo/EditTodo.module.scss
@@ -61,7 +61,7 @@
           padding: 8px;
           height: 40px;
           background: #2B2C37;
-          border: 1px solid rgba(130, 143, 163, 0.25);
+          border: 1px solid #fff;
           border-radius: 4px;
         }
 
@@ -86,7 +86,7 @@
         padding: 8px;
         height: 40px;
         background: #2B2C37;
-        border: 1px solid rgba(130, 143, 163, 0.25);
+        border: 1px solid #fff;
         border-radius: 4px;
 
         font-weight: 500;
