--- a/src/common/widget/Sidebar/Sidebar.module.scss
+++ b/src/common/widget/Sidebar/Sidebar.module.scss
@@ -6,7 +6,7 @@
     left: 0;
     top: 0;
 
-    background-color: rgba(43, 44, 55, 0.85);
+    background-color: rgb(43, 44, 55);
     border-right: 1px solid rgba(255, 255, 255, 0.09);
 
     .innerWrapper {
