--- a/src/app/pages/Main/Main.module.scss
+++ b/src/app/pages/Main/Main.module.scss
@@ -1,9 +1,10 @@
 .container {
+  display: flex;
   position: relative;
-    width: 100%;
+  width: 100%;
 
-    min-height: calc(100vh - 62px);
-  }
+  min-height: calc(100vh - 62px);
+}
 
 .openModal {
   height: 100vh;
