--- a/src/common/components/Todolist/Todolist.module.scss
+++ b/src/common/components/Todolist/Todolist.module.scss
@@ -8,10 +8,11 @@
         padding: 3vw 5vw;
         width: 82vw;
         min-height: 100%;
+        transition: all .3s ease-in-out;
     }
 
     .isOpen {
-        //padding: 20px 23px;
+        width: 98vw;
     }
 }
 
