--- a/src/common/widget/Sidebar/Sidebar.module.scss
+++ b/src/common/widget/Sidebar/Sidebar.module.scss
@@ -1,23 +1,49 @@
 .container {
-    width: 18vw;
-    height: 1px;
-    min-height: calc(100vh);
-    position: fixed;
-    left: 0;
-    top: 0;
+  width: 18vw;
+  height: 1px;
+  min-height: calc(100vh);
+  position: fixed;
+  left: 0;
+  top: 0;
 
-    background-color: rgb(43, 44, 55);
-    border-right: 1px solid rgba(255, 255, 255, 0.09);
+  background-color: rgb(43, 44, 55);
+  border-right: 1px solid rgba(255, 255, 255, 0.09);
+  transition: all .3s ease-in-out;
 
-    .innerWrapper {
-        padding: 10px 10px 10px 0;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
+  .innerWrapper {
+    padding: 10px 10px 30px 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
-        .logoContainer {
-            padding-left: 5vw;
-            margin-bottom: 50px;
-        }
+    .logoContainer {
+      padding-left: 5vw;
+      margin-bottom: 50px;
+    }
+
+    .hideContainer {
+      display: flex;
+      padding-left: 32px;
+      align-items: center;
+      gap: 15px;
+      font-weight: 700;
+      font-size: 15px;
+      line-height: 19px;
+      color: #828FA3;
+      cursor: pointer;
+
+      .icon {
+        width: 18px;
+        height: 18px;
+      }
     }
   }
+}
+
+
+
+.hide {
+  transform: translateX(-18vw);
+}
+
+
