fix bag hidden sidebar

--- a/src/common/components/Link/Link.module.scss
+++ b/src/common/components/Link/Link.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   border-radius: 0px 100px 100px 0px;
   cursor: pointer;
+  color: inherit;
 }
 
 
@@ -21,7 +22,7 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 19px;
-    color: #FFFFFF;
+    color: inherit;
   }
 
   .boardIconContainer {
