--- a/src/common/components/AddNewTodo/AddNewTodo.module.scss
+++ b/src/common/components/AddNewTodo/AddNewTodo.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   background-color: rgba(0, 1, 18, 0.53);
 
   .close {
