--- a/src/common/components/EditTask/EditTask.module.scss
+++ b/src/common/components/EditTask/EditTask.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top:0;
+  position: fixed;
+  top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   background-color: rgba(0, 1, 18, 0.2);
   z-index: 5;
   transition: all 1s;
