--- a/src/common/components/EditToDo/EditTodo.module.scss
+++ b/src/common/components/EditToDo/EditTodo.module.scss
@@ -1,11 +1,11 @@
 @import "./src/styles/mixins/mixins";
 
 .wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   background-color: rgba(0, 1, 18, 0.53);
   z-index: 10;
 
